# BundleAdjustment

./: CMakeLists.txt
include/ba_types/edges/: ba_reprojection_error.h  ba_reprojection_pose_only.h  prior_error.h
include/ba_types/vertices/: point3d.h  pose_lie.h
include/error/: base_error.h
include/optimizer/: optimizer.h
include/variable/: base_variables.h
src/: CMakeLists.txt
test/: CMakeLists.txt  ba_test.cpp  base_error_test.cpp  base_variable_test.cpp  g2o_marginalize_test.cpp  hello_test.cpp  pose_only_ba_test.cpp  vertices_test.cpp
